--- a/src/App.css
+++ b/src/App.css
@@ -1453,6 +1453,189 @@ transform: rotate(95deg);
   color: black;
 }
 
+.window{
+  position: absolute;
+  top: 130px;
+  left: 1400px;
+  width: 300px;
+  height: 300px;
+  border: 10px solid white;
+  background: #a3cbf0;
+  z-index: 1;
+}
+
+.curtain{
+  background: #ff9801;
+  width: 290px;
+  height: 50px;
+  position: relative;
+  left: -5px;
+}
+
+.curtain:before{
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 50px;
+  left: 142px;
+  width: 5px;
+  height: 20px;
+  background: black;
+  z-index: 1;
+}
+
+.curtain:after{
+  content: "";
+  display: inline-block;
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  top: 70px;
+  left: 137px;
+  border-radius: 50%;
+  border: 3px solid #ff9801;
+  z-index: 1;
+}
+
+.cloud{
+  position: relative;
+  z-index: -1;
+}
+
+.cloud ul li{
+  position: absolute;
+  top: 40px;
+  left: 25px;
+  width: 85px;
+  height: 30px;
+  background: #ded5d1;
+  border-radius: 90px 90px 50px 50px;
+}
+
+.cloud ul li:nth-child(2){
+  width: 30px;
+  height: 20px;
+  left: 160px;
+}
+
+.cloud ul li:before,  .cloud ul li:nth-child(2):before, .cloud ul li:nth-child(2):after{
+  content: "";
+  display: inline-block;
+  width: 40px;
+  height: 55px;
+  border-radius: 90px;
+  position: absolute;
+  top: -18px;
+  left: 25px;
+  background: #ded5d1;
+  transform: rotate(-35deg);
+}
+
+.cloud ul li:nth-child(2):before, .cloud ul li:nth-child(2):after{
+  top: -2px;
+  left: 15px;
+  background: #ded5d1;
+  width: 25px;
+  height: 20px;
+}
+
+.cloud ul li:nth-child(2):after{
+  width: 25px;
+  height: 20px;
+  top: 0px;
+  left: 45px;
+  transform: rotate(0deg);
+}
+
+.land{
+  z-index: -1;
+}
+.land, .land:after{
+  width: 180px;
+  height: 130px;
+  background:#8cc44b;
+  position: absolute;
+  left: 0px;
+  bottom: 0;
+  border-radius: 50% 90px 0 0 ;
+}
+
+.land:after{
+  content:"";
+  display: inline-block;
+  width: 150px;
+  height: 90px;
+  left: 130px;
+  z-index: -2;
+}
+
+.tree{
+  position: relative;
+
+}
+
+.tree ul li{
+  width: 30px;
+  height: 30px;
+  background:#8cc44b;
+  position: relative;
+  border-radius: 50%;
+  top: -25px;
+  left: 30px;
+
+}
+
+.tree ul li:after{
+  content: "";
+  display: inline-block;
+  background: #94786d;
+  width: 5px;
+  height: 30px;
+  position: absolute;
+  top: 20px;
+  left: 12px;
+  z-index: -1;
+}
+
+.tree ul li:nth-child(2){
+  top: -65px;
+ left: 70px;
+}
+
+.tree ul li:nth-child(3){
+  top: -60px;
+  left: 200px;
+ }
+
+ .tree ul li:nth-child(4){
+   top: -60px;
+  left: 230px;
+ }
+
+.window-devide{
+  width: 20px;
+  height: 230px;
+  background: white;
+  position: relative;
+  left: 130px;
+}
+
+.window-devide:before, .window-devide:after{
+  content: "";
+  display: inline-block;
+  width: 35px;
+  height: 20px;
+  position: absolute;
+  top: 100px;
+  left: -30px;
+  background: white;
+  border-radius: 50%;
+}
+
+.window-devide:after{
+  left: 15px;
+}
+
 .floor{
    width: auto;
    height: 40vh;
@@ -1781,6 +1964,10 @@ iframe{
     left: 300px;
   }
 
+  .window{
+    left: 950px;
+  }
+
   .awssld, .bio-card, .contact-card{
     top: 1000px;
     left: 120px;
@@ -1906,6 +2093,10 @@ iframe{
 
   .shelf{
     left: 300px;
+  }
+
+  .window{
+    left: 1000px;
   }
 
   .awssld, .bio-card, .contact-card{
@@ -2492,6 +2683,10 @@ iframe{
     left: 550px;
    }
 
+  .window{
+    left: 1000px;
+  }
+
   .awssld, .bio-card, .contact-card{
     top: 830px;
     left: 160px;
@@ -2563,7 +2758,9 @@ iframe{
   .postits{
     left: -290px;
   }
-
+  .window{
+    left: 1100px;
+  }
   .awssld, .bio-card, .contact-card{
     top: 825px;
     left: 200px;
@@ -2695,6 +2892,10 @@ iframe{
 
 .shelf{
   left:600px;
+}
+
+.window{
+  left: 1600px;
 }
 
 .awssld, .bio-card, .contact-card{
@@ -2829,6 +3030,10 @@ iframe{
   
   .shelf{
     left:500px;
+  }
+
+  .window{
+    display: none;
   }
 
   .awssld, .bio-card, .contact-card{
@@ -3099,7 +3304,9 @@ iframe{
     left: 300px;
   }
    
-
+  .window{
+    left: 1300px;
+  }
   .awssld, .bio-card, .contact-card{
     top: 1020px;
     left: 390px;
@@ -3136,6 +3343,7 @@ iframe{
 }
 
 @media only screen and (min-width: 1400px){
+
   .awssld, .bio-card, .contact-card{
     top: 100px;
     left: 250px;
@@ -3171,188 +3379,9 @@ iframe{
 @media only screen and (min-width: 1900px){
 
   .window{
-    position: absolute;
-    top: 130px;
+    display: inline-block;
     left: 1400px;
-    width: 300px;
-    height: 300px;
-    border: 10px solid white;
-    background: #a3cbf0;
-    z-index: 1;
   }
-
-  .curtain{
-    background: #ff9801;
-    width: 290px;
-    height: 50px;
-    position: relative;
-    left: -5px;
-  }
-
-  .curtain:before{
-    content: "";
-    display: inline-block;
-    position: absolute;
-    top: 50px;
-    left: 142px;
-    width: 5px;
-    height: 20px;
-    background: black;
-    z-index: 1;
-  }
-
-  .curtain:after{
-    content: "";
-    display: inline-block;
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    top: 70px;
-    left: 137px;
-    border-radius: 50%;
-    border: 3px solid #ff9801;
-    z-index: 1;
-  }
-
-  .cloud{
-    position: relative;
-    z-index: -1;
-  }
-
-  .cloud ul li{
-    position: absolute;
-    top: 40px;
-    left: 25px;
-    width: 85px;
-    height: 30px;
-    background: #ded5d1;
-    border-radius: 90px 90px 50px 50px;
-  }
-
-  .cloud ul li:nth-child(2){
-    width: 30px;
-    height: 20px;
-    left: 160px;
-  }
-
-  .cloud ul li:before,  .cloud ul li:nth-child(2):before, .cloud ul li:nth-child(2):after{
-    content: "";
-    display: inline-block;
-    width: 40px;
-    height: 55px;
-    border-radius: 90px;
-    position: absolute;
-    top: -18px;
-    left: 25px;
-    background: #ded5d1;
-    transform: rotate(-35deg);
-  }
-
-  .cloud ul li:nth-child(2):before, .cloud ul li:nth-child(2):after{
-    top: -2px;
-    left: 15px;
-    background: #ded5d1;
-    width: 25px;
-    height: 20px;
-  }
-
-  .cloud ul li:nth-child(2):after{
-    width: 25px;
-    height: 20px;
-    top: 0px;
-    left: 45px;
-    transform: rotate(0deg);
-  }
-
-  .land{
-    z-index: -1;
-  }
-  .land, .land:after{
-    width: 180px;
-    height: 130px;
-    background:#8cc44b;
-    position: absolute;
-    left: 0px;
-    bottom: 0;
-    border-radius: 50% 90px 0 0 ;
-  }
-
-  .land:after{
-    content:"";
-    display: inline-block;
-    width: 150px;
-    height: 90px;
-    left: 130px;
-    z-index: -2;
-  }
-
-  .tree{
-    position: relative;
-  
-  }
-
-  .tree ul li{
-    width: 30px;
-    height: 30px;
-    background:#8cc44b;
-    position: relative;
-    border-radius: 50%;
-    top: -25px;
-    left: 30px;
-  
-  }
-
-  .tree ul li:after{
-    content: "";
-    display: inline-block;
-    background: #94786d;
-    width: 5px;
-    height: 30px;
-    position: absolute;
-    top: 20px;
-    left: 12px;
-    z-index: -1;
-  }
-  
-  .tree ul li:nth-child(2){
-    top: -65px;
-   left: 70px;
-  }
-
-  .tree ul li:nth-child(3){
-    top: -60px;
-    left: 200px;
-   }
-
-   .tree ul li:nth-child(4){
-     top: -60px;
-    left: 230px;
-   }
-
-  .window-devide{
-    width: 20px;
-    height: 230px;
-    background: white;
-    position: relative;
-    left: 130px;
-  }
-
-  .window-devide:before, .window-devide:after{
-    content: "";
-    display: inline-block;
-    width: 35px;
-    height: 20px;
-    position: absolute;
-    top: 100px;
-    left: -30px;
-    background: white;
-    border-radius: 50%;
-  }
-
-  .window-devide:after{
-    left: 15px;
-  }
-
   .awssld, .bio-card, .contact-card{
     top: 110px;
     left: 260px;
