--- a/src/App.css
+++ b/src/App.css
@@ -1994,7 +1994,7 @@ iframe{
 
 }
 
-@media screen and (-webkit-min-device-pixel-ratio:2.2){
+@media only screen and (min-width: 350px){
 
   .myname{
     left: 550px;
@@ -2160,7 +2160,7 @@ iframe{
   }
 }
 
-@media screen and (-webkit-min-device-pixel-ratio:3.0){
+@media screen and (-webkit-device-aspect-ratio: 9/16){
 
 
   .myname{
