--- a/src/App.css
+++ b/src/App.css
@@ -5,21 +5,14 @@
 }
 html, body {
   text-align: center;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
+  z-index: -90;
+  width: auto;
+  height: auto;
   margin: 0;
   padding: 0;
   background:#84cce4;
   overflow-x: hidden;
-  border: 1px solid black;
 }
-
-/* #root {
-  max-width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-} */
 
 
 ul li{
@@ -2167,16 +2160,6 @@ iframe{
 }
 
 @media screen and (min-width: 400px){
-
-  .clock{
-    width: 5em;
-    height: 5em;
-  }
-
- .react-clock{
-    width: 3.3em !important;
-    height: 3.3em !important;
-  }
 
   .myname{
     left: 550px;
